--- a/precursor.cfg
+++ b/precursor.cfg
@@ -1,9 +1,14 @@
+snlistfilename: $ATLASLC_DATA/snlist.txt
+
 output:
    outrootdir: $ATLASLC_DATA
    outsubdir: test1
    fileformat: fixed_width_two_line
-   MJDbinsize: 1
+   MJDbinsize: 20
+
 filter: o
+
+username: False
 
 forcedphotpatterns: 
     circular:
