cleanup_lc addition

--- a/precursor.cfg
+++ b/precursor.cfg
@@ -7,8 +7,22 @@ output:
    MJDbinsize: 1
 
 filter: o
-
 username: False
+
+
+
+cleanlc:
+    uncertainty:
+        apply: True
+        Nmedian: 10
+    chi/N:
+        apply: True
+        # type can be dynamic or static
+        type: dynamic
+        # if type=dynamic: remove all measurements with chi2/N bigger than median(chi/N)+Nsigma*stddev(chi/N)
+        Nsigma: 5.0
+        # if type=static: remove all measurements with chi2/N bigger than max_chi2/N
+        max_chi2norm: 5
 
 forcedphotpatterns: 
     circular:
