--- a/precursor.cfg
+++ b/precursor.cfg
@@ -14,15 +14,21 @@ username: False
 cleanlc:
     uncertainty:
         apply: True
+        # flag all measurements with duJy greater than Nmedian*median(duJy)
         Nmedian: 10
     chi/N:
         apply: True
         # type can be dynamic or static
-        type: dynamic
-        # if type=dynamic: remove all measurements with chi2/N bigger than median(chi/N)+Nsigma*stddev(chi/N)
+        type: static
+        # if type=dynamic: flag all measurements with chi2/N greater than median(chi/N)+Nsigma*stddev(chi/N)
         Nsigma: 5.0
-        # if type=static: remove all measurements with chi2/N bigger than max_chi2/N
+        # if type=static: flag all measurements with chi2/N greater than max_chi2/N
         max_chi2norm: 5
+
+averagelc:
+    makecuts: False
+    # flag_biguncertainty_duJy is 0x1, flag_bigchi_dynamic is 0x2, flag_bigchi_static is 0x4
+    flags: 0x3
 
 forcedphotpatterns: 
     circular:
