--- a/precursor.cfg
+++ b/precursor.cfg
@@ -22,11 +22,11 @@ cleanlc:
         type: static
         # if type=dynamic: flag all measurements with chi2/N greater than median(chi/N)+Nsigma*stddev(chi/N)
         Nsigma: 5.0
-        # if type=static: flag all measurements with chi2/N greater than max_chi2/N
+        # if type=static: flag all measurements with chi2/N greater than max_chi2norm
         max_chi2norm: 5
 
 averagelc:
-    makecuts: False
+    makecuts: True
     # flag_biguncertainty_duJy is 0x1, flag_bigchi_dynamic is 0x2, flag_bigchi_static is 0x4
     flags: 0x3
 
