--- a/precursor.cfg
+++ b/precursor.cfg
@@ -8,7 +8,7 @@ output:
    fileformat: fixed_width_two_line
    MJDbinsize: 1
 
-forcedphotpatterns: 
+forcedphotpatterns:
     circular:
         patterntype: circle
         radii: [10,15]
@@ -16,9 +16,12 @@ forcedphotpatterns:
     box:
         patterntype: box
         sidelength: 30
-    galaxy:
-        patterntype: galaxy
+    closebright:
+        autosearch: False
+        patterntype: closebright
         n: 8
+        # minimum distance from SN to offset in arcsec
+        mindist: 3
 
 cleanlc:
     uncertainty:
@@ -30,7 +33,7 @@ cleanlc:
         # type can be dynamic or static
         type: static
         # if type=dynamic: flag all measurements with chi2/N greater than median(chi/N)+Nsigma*stddev(chi/N)
-        Nsigma: 0.5
+        Nsigma: 5
         # if type=static: flag all measurements with chi2/N greater than max_chi2norm
         max_chi2norm: 10
 
@@ -41,3 +44,8 @@ averagelc:
 
 plotlc:
     makecuts: True
+    flags: 0x7
+
+offsetstats:
+    # procedure can be mask1 or mask2
+    procedure: mask2
