--- a/precursor.cfg
+++ b/precursor.cfg
@@ -1,6 +1,7 @@
 snlistfilename: $ATLASLC_DATA/snlist.txt
 filter: o
-username: False
+username: sofia
+casjobs_wsid: 1662363263
 
 output:
    outrootdir: $ATLASLC_DATA
