flux and dflux colname

--- a/precursor.cfg
+++ b/precursor.cfg
@@ -1,7 +1,11 @@
 snlistfilename: $ATLASLC_DATA/snlist.txt
-filter: o
 username: sofia
 casjobs_wsid: 1662363263
+
+flux_colname: uJy
+dflux_colname: duJy
+
+filter: o
 
 output:
    outrootdir: $ATLASLC_DATA
