--- a/precursor.cfg
+++ b/precursor.cfg
@@ -14,17 +14,22 @@ output:
    MJDbinsize: 1
 
 forcedphotpatterns:
-    circular:
+    # use c for circle, b for box, and l for closebright
+    patterns_to_use: [circle, box, closebright]
+    circle:
+        # PatternID in RADECtable is 1
         patterntype: circle
         radii: [10,15]
-        n: 8
+        n: 2
     box:
+        # PatternID in RADECtable is 2
         patterntype: box
         sidelength: 30
     closebright:
+        # PatternID in RADECtable is 3
         autosearch: False
         patterntype: closebright
-        n: 8
+        n: 2
         # minimum distance from SN to offset in arcsec
         mindist: 3
 
@@ -53,4 +58,4 @@ plotlc:
 
 offsetstats:
     # procedure can be mask1 or mask2
-    procedure: mask2
+    procedure: mask1
