--- a/precursor.cfg
+++ b/precursor.cfg
@@ -15,7 +15,7 @@ output:
 
 forcedphotpatterns:
     # use c for circle, b for box, and l for closebright
-    patterns_to_use: [circle, box, closebright]
+    patterns_to_use: [closebright]
     circle:
         # PatternID in RADECtable is 1
         patterntype: circle
@@ -29,7 +29,7 @@ forcedphotpatterns:
         # PatternID in RADECtable is 3
         autosearch: False
         patterntype: closebright
-        n: 2
+        n: 8
         # minimum distance from SN to offset in arcsec
         mindist: 3
 
