--- a/precursor.cfg
+++ b/precursor.cfg
@@ -55,6 +55,8 @@ averagelc:
 plotlc:
     makecuts: True
     flags: 0x7
+    plot_mask1: True
+    plot_mask2: True
 
 offsetstats:
     # procedure can be mask1 or mask2
