offsetstats plotting, bug fixes

--- a/precursor.cfg
+++ b/precursor.cfg
@@ -15,12 +15,12 @@ output:
 
 forcedphotpatterns:
     # use c for circle, b for box, and l for closebright
-    patterns_to_use: [closebright]
+    patterns_to_use: [circle]
     circle:
         # PatternID in RADECtable is 1
         patterntype: circle
         radii: [10,15]
-        n: 2
+        n: 6
     box:
         # PatternID in RADECtable is 2
         patterntype: box
@@ -59,5 +59,5 @@ plotlc:
     plot_mask2: True
 
 offsetstats:
-    # procedure can be mask1 or mask2
-    procedure: mask1
+    # procedure can be 'mask1', 'mask2', or 'both'
+    procedure: both
