plots w/cut data in open red circle

--- a/precursor.cfg
+++ b/precursor.cfg
@@ -59,4 +59,5 @@ plotlc:
 
 offsetstats:
     # procedure can be 'mask1', 'mask2', or 'both'
+    # mask1 uses sigmacut on offset data that has been cleaned; mask2 just cuts nans
     procedure: both
