renamed mask4mjd and mask_nan

--- a/precursor.cfg
+++ b/precursor.cfg
@@ -54,10 +54,10 @@ averagelc:
 plotlc:
     makecuts: True
     flags: 0x7
-    plot_mask1: True
-    plot_mask2: True
+    plot_mask4mjd: True
+    plot_mask_nan: True
 
 offsetstats:
-    # procedure can be 'mask1', 'mask2', or 'both'
-    # mask1 uses sigmacut on offset data that has been cleaned; mask2 just cuts nans
+    # procedure can be 'mask4mjd', 'mask_nan', or 'both'
+    # mask4mjd uses sigmacut on offset data that has been cleaned; mask_nan just cuts nans
     procedure: both
