--- a/precursor.cfg
+++ b/precursor.cfg
@@ -59,5 +59,5 @@ plotlc:
 
 offsetstats:
     # procedure can be 'mask4mjd', 'mask_nan', or 'both'
-    # mask4mjd uses sigmacut on offset data that has been cleaned; mask_nan just cuts nans
+    # mask4mjd (o2) uses sigmacut on offset data that has been cleaned; mask_nan (o1) just cuts nans
     procedure: both
