--- a/precursor.cfg
+++ b/precursor.cfg
@@ -52,7 +52,8 @@ averagelc:
     flags: 0x7
 
 plotlc:
-    makecuts: True
+    makecuts: False
+    plot_bad_data: False
     flags: 0x7
     plot_mask4mjd: True
     plot_mask_nan: True
