download loop bug fixes

--- a/precursor.cfg
+++ b/precursor.cfg
@@ -52,7 +52,7 @@ averagelc:
     flags: 0x7
 
 plotlc:
-    makecuts: False
+    makecuts: True
     plot_bad_data: False
     flags: 0x7
     plot_mask4mjd: True
