--- a/precursor.cfg
+++ b/precursor.cfg
@@ -14,12 +14,12 @@ output:
    MJDbinsize: 1
 
 forcedphotpatterns:
-    patterns_to_use: [closebright]
+    patterns_to_use: [circle]
     circle:
         # PatternID in RADECtable is 1
         patterntype: circle
-        radii: [10,15]
-        n: 6
+        radii: [10]
+        n: 8
     box:
         # PatternID in RADECtable is 2
         patterntype: box
