--- a/precursor.cfg
+++ b/precursor.cfg
@@ -1,4 +1,5 @@
 snlistfilename: $ATLASLC_DATA/snlist.txt
+defaultEntryTable_filename: $ATLASLC_DATA/defaultEntryTable.txt
 username: sofia
 casjobs_wsid: 1662363263
 
@@ -53,10 +54,11 @@ averagelc:
 
 plotlc:
     makecuts: True
-    plot_bad_data: False
+    plot_bad_data: True
+    plot_offset_data: False
     flags: 0x7
-    plot_mask4mjd: True
-    plot_mask_nan: True
+    plot_mask4mjd: False
+    plot_mask_nan: False
 
 offsetstats:
     # procedure can be 'mask4mjd', 'mask_nan', or 'both'
