--- a/precursor.cfg
+++ b/precursor.cfg
@@ -12,6 +12,7 @@ deltat: 50
 output:
    outrootdir: $ATLASLC_DATA
    outsubdir: test1
+   yse_outsubdir: ysetest
    fileformat: fixed_width_two_line
    MJDbinsize: 1
 
