--- a/precursor.cfg
+++ b/precursor.cfg
@@ -22,7 +22,7 @@ forcedphotpatterns:
         # PatternID in RADECtable is 1
         patterntype: circle
         radii: [17]
-        n: 2
+        n: 8
     box:
         # PatternID in RADECtable is 2
         patterntype: box
@@ -66,3 +66,6 @@ offsetstats:
     # procedure can be 'mask4mjd', 'mask_nan', or 'both'
     # mask4mjd (o2) uses sigmacut on offset data that has been cleaned; mask_nan (o1) just cuts nans
     procedure: both
+
+upltoyse:
+    flags: 0x7
