--- a/precursor.cfg
+++ b/precursor.cfg
@@ -1,4 +1,5 @@
-snlistfilename: $ATLASLC_DATA/snlist.txt
+snlistfilename: $ATLASLC_DATA/snlist.txt #snlistsurvey.txt
+snlistsurveyfilename: $ATLASLC_DATA/snlistsurvey.txt
 defaultEntryTable_filename: $ATLASLC_DATA/defaultEntryTable.txt
 username: sofia
 casjobs_wsid: 1662363263
@@ -11,13 +12,13 @@ deltat: 50
 
 output:
    outrootdir: $ATLASLC_DATA
-   outsubdir: test1
+   outsubdir: test1 #survey
    yse_outsubdir: ysetest
    fileformat: fixed_width_two_line
    MJDbinsize: 1
 
 forcedphotpatterns:
-    patterns_to_use: [circle]
+    patterns_to_use: [closebright]
     circle:
         # PatternID in RADECtable is 1
         patterntype: circle
@@ -40,7 +41,7 @@ cleanlc:
         apply: True
         # flag all measurements with duJy greater than Nmedian*median(duJy)
         Nmedian: 5
-    chi/N:
+    chi/N: # rename to X2psf
         apply: True
         # type can be dynamic or static
         type: static
@@ -66,6 +67,14 @@ offsetstats:
     # procedure can be 'mask4mjd', 'mask_nan', or 'both'
     # mask4mjd (o2) uses sigmacut on offset data that has been cleaned; mask_nan (o1) just cuts nans
     procedure: both
+    o1max_X2norm: 2.5
+    o1max_meannorm: 3.0
+    o2max_Nclipped: 2
+    o2max_Nused: 4
+    dayflagging:
+        daymax_Nskipped: 1
+        daymin_Nused: 3
+        daymax_X2norm: 4
 
 upltoyse:
     flags: 0x7
