mega update (unfinished)

--- a/precursor.cfg
+++ b/precursor.cfg
@@ -18,7 +18,7 @@ output:
    MJDbinsize: 1
 
 forcedphotpatterns:
-    patterns_to_use: [closebright]
+    patterns_to_use: [circle]
     circle:
         # PatternID in RADECtable is 1
         patterntype: circle
@@ -58,23 +58,23 @@ averagelc:
 plotlc:
     makecuts: True
     plot_bad_data: True
-    plot_offset_data: False
+    plot_offset_data: True
     flags: 0x7
     plot_mask4mjd: False
     plot_mask_nan: False
 
 offsetstats:
-    # procedure can be 'mask4mjd', 'mask_nan', or 'both'
     # mask4mjd (o2) uses sigmacut on offset data that has been cleaned; mask_nan (o1) just cuts nans
-    procedure: both
     o1max_X2norm: 2.5
     o1max_meannorm: 3.0
     o2max_Nclipped: 2
     o2max_Nused: 4
     dayflagging:
-        daymax_Nskipped: 1
-        daymin_Nused: 3
+        apply2offsets: False
+        daymax_Nclip: 1
+        daymin_Ngood: 2
         daymax_X2norm: 4.0
+    flags: all
 
 upltoyse:
     flags: 0x7
