--- a/precursor.cfg
+++ b/precursor.cfg
@@ -70,7 +70,7 @@ offsetstats:
     o2max_Nclipped: 2
     o2max_Nused: 4
     dayflagging:
-        apply2offsets: False
+        apply2offsets: True
         daymax_Nclip: 1
         daymin_Ngood: 2
         daymax_X2norm: 4.0
