mega update & renaming vars

--- a/precursor.cfg
+++ b/precursor.cfg
@@ -1,4 +1,4 @@
-snlistfilename: $ATLASLC_DATA/snlist.txt #snlistsurvey.txt
+snlistfilename: $ATLASLC_DATA/snlist.txt
 snlistsurveyfilename: $ATLASLC_DATA/snlistsurvey.txt
 defaultEntryTable_filename: $ATLASLC_DATA/defaultEntryTable.txt
 username: sofia
@@ -37,44 +37,46 @@ forcedphotpatterns:
         mindist: 5
 
 cleanlc:
-    uncertainty:
-        apply: True
-        # flag all measurements with duJy greater than Nmedian*median(duJy)
-        Nmedian: 5
-    chi/N: # rename to X2psf
-        apply: True
-        # type can be dynamic or static
-        type: static
-        # if type=dynamic: flag all measurements with chi2/N greater than median(chi/N)+Nsigma*stddev(chi/N)
-        Nsigma: 5
-        # if type=static: flag all measurements with chi2/N greater than max_chi2norm
-        max_chi2norm: 10
-
-averagelc:
-    makecuts: True
-    # flag_biguncertainty_duJy is 0x1, flag_bigchi_dynamic is 0x2, flag_bigchi_static is 0x4
-    flags: 0x7
+    # o0 masks measurements with duJy or chi/N higher than a defined max
+    o0:
+        PSF_uncertainty:
+            apply: True
+            # flag all measurements with duJy greater than o0_Nmedian*median(duJy)
+            o0_Nmedian: 5
+        PSF_X2norm:
+            apply: True
+            # flag all measurements with X2norm greater than o0max_X2norm
+            o0max_X2norm: 10
+    
+    apply_o1o2: True
+    
+    # mask_nan (o1) cuts nans
+    o1:
+        o1max_X2norm: 2.5
+        o1max_meannorm: 3.0
+    
+    # mask4mjd (o2) uses sigmacut on offset data that has been cleaned
+    o2:
+        o2max_Nclipped: 2
+        o2max_Nused: 4
 
 plotlc:
-    makecuts: True
-    plot_bad_data: True
-    plot_offset_data: True
-    flags: 0x7
+    makecuts: True # good data will be plotted based on flags; if plot_bad_data, bad data will be plotted
+    plot_bad_data: True # if making cuts, bad data will be plotted
+    plot_offset_data: True # good offset data will be plotted based on flags; if plot_bad_data, bad offset data will be plotted
+    
+    # decide which flags determine which data are bad
+    # options: [flag_o0_uncertainty, flag_o0_X2norm, flag_o2_ok, flag_o2_bad, flag_daysigma, flag_daybad]
+    flags2apply: [flag_o0_uncertainty, flag_o0_X2norm, flag_o2_bad]
+
     plot_mask4mjd: False
     plot_mask_nan: False
 
 offsetstats:
-    # mask4mjd (o2) uses sigmacut on offset data that has been cleaned; mask_nan (o1) just cuts nans
-    o1max_X2norm: 2.5
-    o1max_meannorm: 3.0
-    o2max_Nclipped: 2
-    o2max_Nused: 4
-    dayflagging:
-        apply2offsets: True
-        daymax_Nclip: 1
-        daymin_Ngood: 2
-        daymax_X2norm: 4.0
-    flags: all
+    apply2offsets: True
+    daymax_Nclip: 1
+    daymin_Ngood: 2
+    daymax_X2norm: 4.0
 
 upltoyse:
     flags: 0x7
