minor plotlc changes

--- a/precursor.cfg
+++ b/precursor.cfg
@@ -66,8 +66,8 @@ plotlc:
     plot_offset_data: True # good offset data will be plotted based on flags; if plot_bad_data, bad offset data will be plotted
     
     # decide which flags determine which data are bad
-    # options: [flag_o0_uncertainty, flag_o0_X2norm, flag_o2_ok, flag_o2_bad, flag_daysigma, flag_daybad]
-    flags2apply: [flag_o0_uncertainty, flag_o0_X2norm, flag_o2_bad]
+    # options: [flag_o0_uncertainty, flag_o0_X2norm, flag_o2_ok, flag_o2_bad, flag_daysigma, flag_daysmallnumber, flag_daybad]
+    flags2apply: [flag_daysigma, flag_daysmallnumber, flag_daybad]
 
     plot_mask4mjd: False
     plot_mask_nan: False
