--- a/precursor.cfg
+++ b/precursor.cfg
@@ -67,7 +67,7 @@ plotlc:
     
     # decide which flags determine which data are bad
     # options: [flag_o0_uncertainty, flag_o0_X2norm, flag_o2_ok, flag_o2_bad, flag_daysigma, flag_daysmallnumber, flag_daybad]
-    flags2apply: [flag_daysigma, flag_daybad]
+    flags2apply: [flag_o2_bad]
 
     plot_mask4mjd: False
     plot_mask_nan: False
