--- a/precursor.cfg
+++ b/precursor.cfg
@@ -18,7 +18,7 @@ output:
    MJDbinsize: 1
 
 forcedphotpatterns:
-    patterns_to_use: [closebright]
+    patterns_to_use: [circle]
     circle:
         # PatternID in RADECtable is 1
         patterntype: circle
