renamed c012, fixed other bugs

--- a/precursor.cfg
+++ b/precursor.cfg
@@ -37,28 +37,28 @@ forcedphotpatterns:
         mindist: 5
 
 cleanlc:
-    # o0 masks measurements with duJy or chi/N higher than a defined max
-    o0:
+    # cut0 masks measurements with duJy or chi/N higher than a defined max
+    cut0:
         PSF_uncertainty:
             apply: True
             # flag all measurements with duJy greater than o0_Nmedian*median(duJy)
-            o0_Nmedian: 5
+            c0_Nmedian: 5
         PSF_X2norm:
             apply: True
             # flag all measurements with X2norm greater than o0max_X2norm
-            o0max_X2norm: 10
+            c0max_X2norm: 10
     
-    apply_o1o2: True
+    apply_c1c2: True
     
-    # mask_nan (o1) cuts nans
-    o1:
-        o1max_X2norm: 2.5
-        o1max_meannorm: 3.0
+    # mask_nan (cut1) cuts nans
+    cut1:
+        c1max_X2norm: 2.5
+        c1max_meannorm: 3.0
     
-    # mask4mjd (o2) uses sigmacut on offset data that has been cleaned
-    o2:
-        o2max_Nclipped: 2
-        o2max_Nused: 4
+    # mask4mjd (cut2) uses sigmacut on offset data that has been cleaned
+    cut2:
+        c2max_Nclipped: 2
+        c2max_Nused: 4
 
 plotlc:
     makecuts: True # good data will be plotted based on flags; if plot_bad_data, bad data will be plotted
@@ -66,8 +66,8 @@ plotlc:
     plot_offset_data: True # good offset data will be plotted based on flags; if plot_bad_data, bad offset data will be plotted
     
     # decide which flags determine which data are bad
-    # options: [flag_o0_uncertainty, flag_o0_X2norm, flag_o2_ok, flag_o2_bad, flag_daysigma, flag_daysmallnumber, flag_daybad]
-    flags2apply: [flag_o2_bad]
+    # options: [flag_c0_uncertainty, flag_c0_X2norm, flag_c2_ok, flag_c2_bad, flag_daysigma, flag_daysmallnumber, flag_daybad]
+    flags2apply: [flag_c2_bad]
 
     plot_mask4mjd: False
     plot_mask_nan: False
