--- a/precursor.cfg
+++ b/precursor.cfg
@@ -67,7 +67,7 @@ plotlc:
     
     # decide which flags determine which data are bad
     # options: [flag_c0_uncertainty, flag_c0_X2norm, flag_c2_ok, flag_c2_bad, flag_daysigma, flag_daysmallnumber, flag_daybad]
-    flags2apply: [flag_c2_bad]
+    flags2apply: [flag_daysigma, flag_daybad]
 
     plot_mask4mjd: False
     plot_mask_nan: False
