cleaning up code. masking fixed

--- a/precursor.cfg
+++ b/precursor.cfg
@@ -14,7 +14,8 @@ output:
    outrootdir: $ATLASLC_DATA
    outsubdir: test1 #survey
    yse_outsubdir: ysetest
-   fileformat: fixed_width_two_line
+   #fileformat: fixed_width_two_line
+   fileformat:
    MJDbinsize: 1
 
 forcedphotpatterns:
@@ -39,31 +40,30 @@ forcedphotpatterns:
 cleanlc:
     # cut0 masks measurements with duJy or chi/N higher than a defined max
     cut0:
-        PSF_uncertainty:
-            apply: True
-            # flag all measurements with duJy greater than o0_Nmedian*median(duJy)
-            c0_Nmedian: 5
-        PSF_X2norm:
-            apply: True
-            # flag all measurements with X2norm greater than o0max_X2norm
-            c0max_X2norm: 10
+        # flag all measurements with duJy greater than N_dflux_max*median(duJy)
+        N_dflux_max: 2.5
+        # flag all measurements with duJy greater than o0_Nmedian*median(duJy)
+        PSF_X2norm_max: 10
     
     apply_c1c2: True
     
     # mask_nan (cut1) cuts nans
     cut1:
-        c1max_X2norm: 2.5
-        c1max_meannorm: 3.0
+        c1_X2norm_max: 2.5
+        # good measurement if abs(mean/mean_err)<c1_absmeannorm_max
+        c1_absmeannorm_max: 3.0
     
     # mask4mjd (cut2) uses sigmacut on offset data that has been cleaned
     cut2:
-        c2max_Nclipped: 2
-        c2max_Nused: 4
+        c2_X2norm_max: 2.5
+        c2_absmeannorm_max: 3.0
+        c2_Nclipped_max: 2
+        c2_Ngood_min: 4
 
 plotlc:
     makecuts: True # good data will be plotted based on flags; if plot_bad_data, bad data will be plotted
     plot_bad_data: True # if making cuts, bad data will be plotted
-    plot_offset_data: True # good offset data will be plotted based on flags; if plot_bad_data, bad offset data will be plotted
+    plot_controllc_data: True # good control lc data will be plotted based on flags; if plot_bad_data, bad offset data will be plotted
     
     # decide which flags determine which data are bad
     # options: [flag_c0_uncertainty, flag_c0_X2norm, flag_c2_ok, flag_c2_bad, flag_daysigma, flag_daysmallnumber, flag_daybad]
@@ -72,11 +72,11 @@ plotlc:
     plot_mask4mjd: False
     plot_mask_nan: False
 
-offsetstats:
-    apply2offsets: True
-    daymax_Nclip: 1
-    daymin_Ngood: 2
-    daymax_X2norm: 4.0
+averageLC:
+    apply2offsets: False
+    Nclip_max: 1
+    Ngood_min: 2
+    X2norm_max: 4.0
 
 upltoyse:
     flags: 0x7
