--- a/precursor.cfg
+++ b/precursor.cfg
@@ -66,8 +66,8 @@ plotlc:
     plot_controllc_data: True # good control lc data will be plotted based on flags; if plot_bad_data, bad offset data will be plotted
     
     # decide which flags determine which data are bad
-    # options: [flag_c0_uncertainty, flag_c0_X2norm, flag_c2_ok, flag_c2_bad, flag_daysigma, flag_daysmallnumber, flag_daybad]
-    flags2apply: [flag_daysigma, flag_daybad]
+    # options: [flag_c0_uncertainty,flag_c0_X2norm,flag_c1_X2norm,flag_c1_absnormmean,flag_c2_X2norm,flag_c2_absnormmean,flag_c2_Nclip,flag_c2_Nused,flag_daysigma,flag_daysmallnumber,flag_c0_bad,flag_c2_bad,flag_day_bad]
+    flags2apply: [flag_c0_bad,flag_c2_bad,flag_day_bad,flag_daysigma,flag_daysmallnumber]
 
     plot_mask4mjd: False
     plot_mask_nan: False
