--- a/precursor.cfg
+++ b/precursor.cfg
@@ -73,7 +73,7 @@ plotlc:
     plot_mask_nan: False
 
 averageLC:
-    apply2offsets: False
+    apply2offsets: True
     Nclip_max: 1
     Ngood_min: 2
     X2norm_max: 4.0
