--- a/precursor.cfg
+++ b/precursor.cfg
@@ -19,7 +19,7 @@ output:
    MJDbinsize: 1
 
 forcedphotpatterns:
-    patterns_to_use: [closebright]
+    patterns_to_use: [circle]
     circle:
         # PatternID in RADECtable is 1
         patterntype: circle
@@ -67,7 +67,7 @@ plotlc:
     
     # decide which flags determine which data are bad
     # options: [flag_c0_uncertainty,flag_c0_X2norm,flag_c1_X2norm,flag_c1_absnormmean,flag_c2_X2norm,flag_c2_absnormmean,flag_c2_Nclip,flag_c2_Nused,flag_daysigma,flag_daysmallnumber,flag_c0_bad,flag_c2_bad,flag_day_bad]
-    flags2apply: [flag_c0_bad,flag_c2_bad,flag_day_bad,flag_daysigma,flag_daysmallnumber]
+    flags2apply: [flag_c0_bad,flag_c2_bad,flag_day_bad]
 
     plot_mask4mjd: False
     plot_mask_nan: False
