--- a/precursor.cfg
+++ b/precursor.cfg
@@ -1,5 +1,4 @@
-snlistfilename: $ATLASLC_DATA/snlist.txt
-snlistsurveyfilename: $ATLASLC_DATA/snlistsurvey.txt
+snlistfilename: $ATLASLC_DATA/snlistsurvey.txt #$ATLASLC_DATA/snlist.txt
 defaultEntryTable_filename: $ATLASLC_DATA/defaultEntryTable.txt
 username: sofia
 casjobs_wsid: 1662363263
@@ -12,7 +11,7 @@ deltat: 50
 
 output:
    outrootdir: $ATLASLC_DATA
-   outsubdir: test1 #survey
+   outsubdir: survey #test1
    yse_outsubdir: ysetest
    #fileformat: fixed_width_two_line
    fileformat:
