--- a/precursor.cfg
+++ b/precursor.cfg
@@ -76,6 +76,11 @@ averageLC:
     Nclip_max: 1
     Ngood_min: 2
     X2norm_max: 4.0
+    keepNaNrows: True
+
+detectBumps:
+    apply2offsets: True
+    gaussian_sigma: 25.0
 
 upltoyse:
     flags: 0x7
