--- a/precursor.cfg
+++ b/precursor.cfg
@@ -58,6 +58,13 @@ cleanlc:
         c2_Nclipped_max: 2
         c2_Ngood_min: 4
 
+    # define which flags identify bad measurements and questionable measurements
+    # these lists are used in definitions that get indices based on flag identification ('og' used with original light curve, 'avg' used with averaged light curve)
+    exclude_flags_og: [flag_c0_bad,flag_c2_bad,flag_day_bad]
+    exclude_flags_avg: [flag_day_bad]
+    questionable_flags_og: [flag_c2_ok]
+    questionable_flags_avg: [flag_daysigma,flag_daysmallnumber]
+
 plotlc:
     makecuts: True # good data will be plotted based on flags; if plot_bad_data, bad data will be plotted
     plot_bad_data: True # if making cuts, bad data will be plotted
