--- a/precursor.cfg
+++ b/precursor.cfg
@@ -3,6 +3,8 @@ defaultEntryTable_filename: $ATLASLC_DATA/defaultEntryTable.txt
 username: sofia
 casjobs_wsid: 1662363263
 
+api: False
+
 flux_colname: uJy
 dflux_colname: duJy
 
