moved plotlc arguments

--- a/precursor.cfg
+++ b/precursor.cfg
@@ -3,7 +3,7 @@ defaultEntryTable_filename: $ATLASLC_DATA/defaultEntryTable.txt
 username: sofia
 casjobs_wsid: 1662363263
 
-api: True
+api: False
 
 flux_colname: uJy
 dflux_colname: duJy
