--- a/precursor.cfg
+++ b/precursor.cfg
@@ -92,4 +92,4 @@ detectBumps:
 
 upltoyse:
     flags: 0x7
-    use_cut0: True # cut measurements with large x2norm or uncertainties before averaging
+    use_cut0: False # cut measurements with large x2norm or uncertainties before averaging
