--- a/precursor.cfg
+++ b/precursor.cfg
@@ -93,3 +93,4 @@ detectBumps:
 upltoyse:
     flags: 0x7
     use_cut0: False # cut measurements with large x2norm or uncertainties before averaging
+    yse_list: https://ziggy.ucolick.org/yse/explorer/213/
