fixed flagging issues

--- a/precursor.cfg
+++ b/precursor.cfg
@@ -92,5 +92,8 @@ detectBumps:
 
 upltoyse:
     flags: 0x7
+    Nclip_max: 1
+    Ngood_min: 2
+    X2norm_max: 4.0
     use_cut0: False # cut measurements with large x2norm or uncertainties before averaging
     yse_list: https://ziggy.ucolick.org/yse/explorer/147/download?format=csv
