added mjd max and TNSnamelist index features

--- a/precursor.cfg
+++ b/precursor.cfg
@@ -41,6 +41,11 @@ forcedphotpatterns:
 cleanlc:
     # cut0 masks measurements with duJy or chi/N higher than a defined max
     cut0:
+        # use dynamic chi-square cut instead of static
+        dynamic_X2_cut: False
+        # use signal-to-noise or flux median for dynamic cut (options: flux_dflux or flux_median)
+        table_type: flux_dflux
+
         # flag all measurements with duJy greater than N_dflux_max*median(duJy)
         N_dflux_max: 2.5
         PSF_X2norm_max: 10
