--- a/precursor.cfg
+++ b/precursor.cfg
@@ -20,7 +20,7 @@ output:
    MJDbinsize: 1
 
 forcedphotpatterns:
-    patterns_to_use: [circle]
+    patterns_to_use: [closebright]
     circle:
         # PatternID in RADECtable is 1
         patterntype: circle
